--- a/BandManager/WPF/App.xaml
+++ b/BandManager/WPF/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="Band.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Band"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:Band">
     <Application.Resources>
          
     </Application.Resources>
