--- a/BandManager/WPF/App.xaml
+++ b/BandManager/WPF/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application x:Class="Band.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Band">
+             xmlns:local="clr-namespace:Band" 
+             DispatcherUnhandledException="App_OnDispatcherUnhandledException">
     <Application.Resources>
          
     </Application.Resources>
