--- a/BandManager/WPF/MainSongWindow.xaml
+++ b/BandManager/WPF/MainSongWindow.xaml
@@ -24,7 +24,8 @@
             <ColumnDefinition Width="*"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <Grid Name="Songs" Grid.Row="0" Grid.Column="0">
+        <GroupBox Header="Songs" Grid.Row="0" Grid.Column="0">
+        <Grid Name="Songs">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"></RowDefinition>
                 <RowDefinition Height ="10*"></RowDefinition>
@@ -33,14 +34,15 @@
                 <ColumnDefinition></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <bnav:BindingNavigator Grid.Row="0" Grid.ColumnSpan="2" Margin="2" Background="LightBlue"
+            <bnav:BindingNavigator Grid.Row="0" Grid.Column="0" Margin="2" Background="LightBlue"
                             Name="Navigator"
                             ItemsSource="{Binding Songs}"
                             AddNewItemCommand="{Binding AddNewPersonCommand}"
                             DeleteItemCommand="{Binding DeletePersonCommand}"
                             SaveCommand="{Binding SaveCommand}"
                             />
-            <DockPanel Margin="5" Grid.Row="1" Grid.Column="0">
+                <Button Style="{StaticResource Buttons}" Grid.Row="0" Grid.Column="1" Content=">>>>"/>
+                    <DockPanel Margin="5" Grid.Row="1" Grid.Column="0">
                 <DataGrid Width="auto" Height="auto" AlternatingRowBackground="LightBlue" AutoGenerateColumns="False" x:Name="SongDataGrid" ItemsSource="{Binding Songs}" SelectedItem="{Binding SelectedSong}">
                     <DataGrid.Columns>
                         <DataGridComboBoxColumn ElementStyle="{StaticResource SongTypes}" EditingElementStyle="{StaticResource SongTypes}" Width="*" Header="Type" SelectedValueBinding="{Binding Id}" DisplayMemberPath="Name" SelectedValuePath="Id"/>
@@ -52,24 +54,33 @@
             </DockPanel>
             <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Vertical">
                 <TextBox Margin="5" Height="200" Text="{Binding SelectedSong.Chords}" TextWrapping="Wrap" AcceptsReturn="True"/>
-                <Button Style="{StaticResource Buttons}" Content="Transpose Up"></Button>
-                <Button Style="{StaticResource Buttons}" Content="Transpose Down"></Button>
-                <Button Style="{StaticResource Buttons}" Content="Save"></Button>
-            </StackPanel>
-        
-        </Grid>
-        <Grid Name="SongBlocks" Grid.Row="0" Grid.Column="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-            <StackPanel Grid.Row="0" Grid.Column="0">
-                <TextBlock Text="Here will be the song blocks"></TextBlock>
-            </StackPanel>
-            <StackPanel Grid.Row="0" Grid.Column="1">
-                <TextBlock Text="Here will be the buttons for block manipulation"></TextBlock>
+                <Button Style="{StaticResource Buttons}" Content="Transpose Up"/>
+                <Button Style="{StaticResource Buttons}" Content="Transpose Down"/>
+                <Button Style="{StaticResource Buttons}" Content="Save"/>
             </StackPanel>
         </Grid>
+        </GroupBox>
+        <GroupBox Grid.Row="0"  Grid.Column="1"  Header="Song blocks">
+        <Grid Name="SongBlocks">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <DockPanel Grid.Row="0" Grid.Column="0">
+                        <TextBox Name="SongBlocksTextBox"/>
+                    </DockPanel>
+                <StackPanel Grid.Row="0" Grid.Column="1">
+                    <Button Style="{StaticResource Buttons}" Content="Move up"/>
+                    <Button Style="{StaticResource Buttons}" Content="Move down"/>
+                    <Button Style="{StaticResource Buttons}" Content="Remove empty"/>
+                    <Button Style="{StaticResource Buttons}" Content="Remove selected"/>
+                    <Button Style="{StaticResource Buttons}" Content="Group"/>
+                    <Button Style="{StaticResource Buttons}" Content="Save"/>
+                    <Button Style="{StaticResource Buttons}" Content="Load"/>
+                    <Button Style="{StaticResource Buttons}" Content="Print"/>
+                </StackPanel>
+            </Grid>
+        </GroupBox>
         <StatusBar Name="StatusBar" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" VerticalAlignment="Bottom">
             <StatusBarItem>
                 <TextBlock Text="Status Bar"></TextBlock>
